--- a/views/valenceAnnotation.ejs
+++ b/views/valenceAnnotation.ejs
@@ -136,42 +136,62 @@ valenceScale1.addEventListener("click", function(){
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + valence, true);
       xhr.send();
+      valenceScale2.disabled = true;
+      valenceScale3.disabled = true;
+      valenceScale4.disabled = true;
+      valenceScale5.disabled = true;
   });
 
   valenceScale2.addEventListener("click", function(){
       //valence scale select marker using 112 for -1
-      var valence = "111";
+      var valence = "112";
       console.log(valence);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + valence, true);
       xhr.send();
+      valenceScale1.disabled = true;
+      valenceScale3.disabled = true;
+      valenceScale4.disabled = true;
+      valenceScale5.disabled = true;
   });
 
   valenceScale3.addEventListener("click", function(){
       //valence scale select marker using 113 for 0
-      var valence = "111";
+      var valence = "113";
       console.log(valence);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + valence, true);
       xhr.send();
+      valenceScale1.disabled = true;
+      valenceScale2.disabled = true;
+      valenceScale4.disabled = true;
+      valenceScale5.disabled = true;
   });
 
   valenceScale4.addEventListener("click", function(){
       //valence scale select marker using 114 for 1
-      var valence = "111";
+      var valence = "114";
       console.log(valence);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + valence, true);
       xhr.send();
+      valenceScale1.disabled = true;
+      valenceScale2.disabled = true;
+      valenceScale3.disabled = true;
+      valenceScale5.disabled = true;
   });
 
   valenceScale5.addEventListener("click", function(){
       //valence scale select marker using 115 for 2
-      var valence = "111";
+      var valence = "115";
       console.log(valence);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + valence, true);
       xhr.send();
+      valenceScale1.disabled = true;
+      valenceScale2.disabled = true;
+      valenceScale3.disabled = true;
+      valenceScale4.disabled = true;
   });
 
   valenceNext.addEventListener("click", function(){
