--- a/views/arousalAnnotation.ejs
+++ b/views/arousalAnnotation.ejs
@@ -128,8 +128,8 @@ $(document).ready(function(){
 });
 
 arousalScale1.addEventListener("click", function(){
-      //arousal scale select marker using 101 for -2
-      var anotation = "101";
+      //arousal scale select marker 
+      var anotation = "100";
       console.log(anotation);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + anotation, true);
@@ -141,8 +141,8 @@ arousalScale1.addEventListener("click", function(){
   });
 
   arousalScale2.addEventListener("click", function(){
-      //arousal scale select marker using 102 for -1
-      var anotation = "102";
+      //arousal scale select marker 
+      var anotation = "100";
       console.log(anotation);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + anotation, true);
@@ -154,8 +154,8 @@ arousalScale1.addEventListener("click", function(){
   });
 
   arousalScale3.addEventListener("click", function(){
-      //arousal scale select marker using 103 for 0
-      var anotation = "103";
+      //arousal scale select marker 
+      var anotation = "100";
       console.log(anotation);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + anotation, true);
@@ -167,8 +167,8 @@ arousalScale1.addEventListener("click", function(){
   });
 
   arousalScale4.addEventListener("click", function(){
-      //arousal scale select marker using 104 for 1
-      var anotation = "104";
+      //arousal scale select marker 
+      var anotation = "100";
       console.log(anotation);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + anotation, true);
@@ -181,7 +181,7 @@ arousalScale1.addEventListener("click", function(){
 
   arousalScale5.addEventListener("click", function(){
       //arousal scale select marker using 105 for 2
-      var anotation = "105";
+      var anotation = "100";
       console.log(anotation);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + anotation, true);
@@ -195,7 +195,7 @@ arousalScale1.addEventListener("click", function(){
 
   arousalNext.addEventListener("click", function(){
       //arousal next marker using 110 for end of arousal
-      var arousalN = "110";
+      var arousalN = "98";
       console.log(arousalN);
       var xhr = new XMLHttpRequest();
       xhr.open("GET", "http://127.0.0.1:5000/doserial/ranking/" + arousalN, true);
